feat: UI changes

--- a/Login And LogOut/styles.css
+++ b/Login And LogOut/styles.css
@@ -7,7 +7,7 @@
     background-color: #f9f9f9;
 }
 
-/* Style the login form */
+/* Style of the login form */
 .login-form {
     display: flex;
     flex-direction: column;
